# easygoogle

./: .coveragerc  .easygoogle_config.yaml.example  .gitignore  AGENTS.md  AGENT_WORK_SUMMARY.md  CHANGELOG.md  CONFIG_IMPLEMENTATION_GUIDE.md  DEPLOYMENT.md  GOOGLE_API_SETUP.md  LIBRARY_STRATEGY_ANALYSIS.md  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  REPOSITORY_NAME_PROPOSALS.md  REPOSITORY_NAME_PROPOSALS_V2.md  TESTING_SUMMARY.md  TEST_RESULTS.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: lint.yml  publish.yml  tests.yml
docs/: CONFIG_DESIGN.md  CONFIG_IMPLEMENTATION.md  README.md
easygoogle/: __init__.py  config.py
easygoogle/google/: __init__.py  google_client_manager.py  manager.py  utils.py
examples/: GoogleSheetManager.ipynb  google_drive_example.py  google_sheets_example.py
gs_utils/: __init__.py
gs_utils/google/: google_client_manager.py
scripts/: deploy.py
tests/: test_basic.py  test_config.py  test_google_auth_errors.py
